RESOLVED FIXED17207
Database example doesn't work (requires not-yet-released Safari)
https://bugs.webkit.org/show_bug.cgi?id=17207
Summary Database example doesn't work (requires not-yet-released Safari)
Stefano De Sabbata
Reported 2008-02-07 03:16:57 PST
Error reported: "Failed to open the database on disk. This is probably because the version was bad or there is not enough space left in this domain's quota". It doesn't save notes.
Attachments
Robert Blaut
Comment 1 2008-02-07 05:06:38 PST
Confirmed in Webkit r30053.
Alexey Proskuryakov
Comment 2 2008-02-07 11:09:55 PST
This is by design: this feature is no longer compatible with shipping versions of Safari. Perhaps we need to add a workaround for nightly builds to work?
Darin Adler
Comment 3 2008-02-07 11:45:31 PST
I think it would be fine to hack something in that's specific to nightly builds. The best place would probably be in WebKit/mac/WebCoreSupport/WebChromeClient.mm and WebKit/win/WebChromeClient.cpp -- each could say "if this is a nightly build and the quota is 0, then set the quota to 5 MB" in the case where the delegate method is not implemented.
Alexey Proskuryakov
Comment 4 2008-02-14 07:42:47 PST
Committed revision 30229 and 30230.
Note You need to log in before you can comment on or make changes to this bug.