        Reviewed by Adam Roben.

http://bugs.webkit.org/show_bug.cgi?id=17207
        Database example doesn't work (requires not-yet-released Safari)

        * mac/WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::exceededDatabaseQuota): Check Safari version, and allow 5 megabytes of storage
        if it's too old.

        * win/WebChromeClient.cpp:
        (WebChromeClient::exceededDatabaseQuota): Check Safari version, and allow 5 megabytes of storage
        if it's too old.



Canonical link: https://commits.webkit.org/24034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30229 268f45cc-cd09-0410-ab3c-d52691b4dbfc